--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,5 +1,5 @@
-@import "reset";
-@import "fonts";
-@import "variables";
-@import "global";
+@import "assets/reset";
+@import "assets/fonts";
+@import "assets/variables";
+@import "assets/global";
 @import "main";
