--- a/src/scss/assets/global.scss
+++ b/src/scss/assets/global.scss
@@ -6,11 +6,13 @@ html {
     overflow-y: hidden;
   }
 }
+
 *,
 *::after,
 *::before {
   box-sizing: inherit;
 }
+
 body {
   position: relative;
   overflow-x: hidden;
@@ -18,36 +20,76 @@ body {
   font-family: $f1;
   font-weight: 400;
   font-size: 16px;
-  line-height: 18px;
-  color: #000;
+  line-height: 24px;
+  color: $black;
 }
+
 a {
-  color: #000;
+  color: $blue_d;
+  &:hover {
+    text-decoration: underline;
+  }
 }
-svg {
-  fill: #000;
+
+.fa-regular {
+  color: $blue;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
 }
 
 // ---- Global-Classes ----
 .container {
   margin: 0 auto;
   padding: 0 15px;
-  max-width: 1170px;
+  max-width: 1804px;
 }
 
 .btn {
-  padding: 12px 24px;
-  font-weight: 700;
-  border-radius: 3px;
-  font-size: 14px;
-  line-height: 16px;
-  border: 1px solid transparent;
-  background: #fff;
-  color: #000;
+  padding: 12px 20px;
+  border-radius: 6px;
+  font-size: 16px;
+  line-height: 24px;
+  background: $yellow;
+  color: $black;
+  display: flex;
+  align-items: center;
   transition: 0.3s;
+  cursor: pointer;
+  i {
+    font-size: 16px;
+    line-height: 18px;
+    color: $black;
+    margin-right: 10px;
+  }
+  &:hover, &:focus {
+    background: darken($yellow, 15%);
+  }
+}
+
+.input {
+  display: flex;
+  align-items: center;
+  color: $black;
+  border: 2px solid $blue_l;
+  border-radius: 6px;
+  padding: 9px 20px;
+  transition: 0.2s;
+  input {
+    width: 100%;
+    &::placeholder {
+      color: $blue_l;
+    }
+  }
+  i {
+    color: $blue_l;
+    transition: 0.2s;
+  }
   &:hover {
-    background: #000;
-    color: #fff;
+    border-color: $blue;
+    i {
+      color: $blue;
+    }
   }
 }
 
@@ -55,14 +97,16 @@ svg {
 ::-webkit-scrollbar {
   width: 5px;
 }
+
 ::-webkit-scrollbar-thumb {
-  background-color: $main;
+  background-color: $black;
 }
+
 ::-webkit-scrollbar-track {
   background-color: #000;
 }
 
 // Selection
 ::selection {
-  background: rgba($main, 0.6) !important;
+  background: rgba($black, 0.6) !important;
 }
