--- a/src/scss/assets/variables.scss
+++ b/src/scss/assets/variables.scss
@@ -1,2 +1,9 @@
-$f1: "Sans Serif";
-$main: #1c1c1c;
+$f1: 'Circe', sans-serif;
+
+$black: #333;
+$white: #fff;
+$blue: #0E6CDD;
+$blue_d: #00479C;
+$blue_l: rgba(#0E6CDD, 0.5);
+$yellow: #FFD740;
+$bg: #F1F6FD;
