--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,8 @@
+@import "plugins/fontawesome.min";
+
 @import "assets/reset";
-@import "assets/fonts";
 @import "assets/variables";
+@import "assets/fonts";
 @import "assets/global";
+
 @import "main";
