--- a/src/scss/assets/fonts.scss
+++ b/src/scss/assets/fonts.scss
@@ -1,55 +1,42 @@
 @font-face {
   font-family: 'Circe';
-  font-display: block;
-  src: url("../fonts/Circe-Thin.woff2") format("woff2"), url("../fonts/Circe-Thin.woff") format("woff");
-  font-weight: 100;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Circe';
-  font-display: block;
-  src: url("../fonts/Circe-Light.woff2") format("woff2"), url("../fonts/Circe-Light.woff") format("woff");
+  src: local('Circe Light'), local('Circe-Light'),
+  url('../fonts/Circe-Light.woff2') format('woff2'),
+  url('../fonts/Circe-Light.ttf') format('truetype');
   font-weight: 300;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Circe';
-  font-display: block;
-  src: url("../fonts/Circe-Regular.woff2") format("woff2"), url("../fonts/Circe-Regular.woff") format("woff");
-  font-weight: 400;
+  src: local('Circe'), local('Circe-Regular'),
+  url('../fonts/Circe-Regular.woff2') format('woff2'),
+  url('../fonts/Circe-Regular.ttf') format('truetype');
+  font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Circe';
-  font-display: block;
-  src: url("../fonts/Circe-Bold.woff2") format("woff2"), url("../fonts/Circe-Bold.woff") format("woff");
-  font-weight: 700;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Circe';
-  font-display: block;
-  src: url("../fonts/Circe-ExtraBold.woff2") format("woff2"), url("../fonts/Circe-ExtraBold.woff") format("woff");
-  font-weight: 900;
+  src: local('Circe Bold'), local('Circe-Bold'),
+  url('../fonts/Circe-Bold.woff2') format('woff2'),
+  url('../fonts/Circe-Bold.ttf') format('truetype');
+  font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Font Awesome 6 Pro';
-  font-display: block;
-  src: url("../fonts/fa-regular-400.woff2") format("woff2"), url("../fonts/fa-regular-400.woff") format("woff");
+  font-style: normal;
   font-weight: 400;
-  font-style: normal;
+  font-display: block;
+  src: url("../fonts/fa-regular-400.woff2") format("woff2"), url("../fonts/fa-regular-400.ttf") format("truetype");
 }
 
 @font-face {
   font-family: 'Font Awesome 6 Pro';
-  font-display: block;
-  src: url("../fonts/fa-sharp-solid-900.woff2") format("woff2"), url("../fonts/fa-sharp-solid-900.woff") format("woff");
-  font-weight: 700;
   font-style: normal;
+  font-weight: 700;
+  font-display: block;
+  src: url("../fonts/fa-sharp-solid-900.woff2") format("woff2"), url("../fonts/fa-sharp-solid-900.ttf") format("truetype");
 }
