--- a/src/scss/assets/global.scss
+++ b/src/scss/assets/global.scss
@@ -1,6 +1,6 @@
-// ---- Global-Tags ----
+// Tags
 html {
-  overflow-x: hidden;
+  overflow: hidden;
   box-sizing: border-box;
   &.fixed {
     overflow-y: hidden;
@@ -15,17 +15,20 @@ html {
 
 body {
   position: relative;
-  overflow-x: hidden;
+  overflow: hidden;
   min-width: 320px;
-  font-family: $f1;
+  min-height: 100vh;
+  font-family: $font;
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
   color: $black;
+  background: $bg;
 }
 
 a {
-  color: $blue_d;
+  color: $blue;
+  transition: 0.2s;
   &:hover {
     text-decoration: underline;
   }
@@ -33,80 +36,167 @@ a {
 
 .fa-regular {
   color: $blue;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-}
-
-// ---- Global-Classes ----
-.container {
-  margin: 0 auto;
-  padding: 0 15px;
-  max-width: 1804px;
-}
-
-.btn {
-  padding: 12px 20px;
-  border-radius: 6px;
-  font-size: 16px;
-  line-height: 24px;
-  background: $yellow;
-  color: $black;
-  display: flex;
-  align-items: center;
-  transition: 0.3s;
-  cursor: pointer;
-  i {
-    font-size: 16px;
-    line-height: 18px;
-    color: $black;
-    margin-right: 10px;
-  }
-  &:hover, &:focus {
-    background: darken($yellow, 15%);
-  }
-}
-
-.input {
-  display: flex;
-  align-items: center;
-  color: $black;
-  border: 2px solid $blue_l;
-  border-radius: 6px;
-  padding: 9px 20px;
   transition: 0.2s;
-  input {
-    width: 100%;
-    &::placeholder {
-      color: $blue_l;
-    }
-  }
-  i {
-    color: $blue_l;
-    transition: 0.2s;
-  }
-  &:hover {
-    border-color: $blue;
-    i {
-      color: $blue;
-    }
-  }
+  font-size: 16px;
+  line-height: 19px;
+  text-decoration: none;
 }
 
 // ScrollBar
 ::-webkit-scrollbar {
   width: 5px;
+  height: 7px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: $black;
+  background-color: $blue;
 }
 
 ::-webkit-scrollbar-track {
-  background-color: #000;
+  background-color: $white;
 }
 
 // Selection
 ::selection {
-  background: rgba($black, 0.6) !important;
+  background: rgba($blue, 0.2);
+}
+
+.disabled {
+  pointer-events: none;
+}
+
+// Buttons
+.btn {
+  user-select: none;
+  background-color: $yellow;
+  padding: 14px 30px;
+  border-radius: 2px;
+  transition: 0.3s;
+  font-size: 16px !important;
+  line-height: 24px !important;
+  &:hover {
+    background-color: darken($yellow, 15%);
+  }
+  &.disabled {
+    pointer-events: none;
+    opacity: 0.5;
+  }
+  &:focus {
+    background-color: darken($yellow, 15%);
+  }
+}
+
+a.btn {
+  color: $black;
+  text-align: center;
+  &:hover {
+    text-decoration: none;
+  }
+}
+
+// Заголовки
+.title {
+  font-size: 24px;
+  line-height: 32px;
+}
+
+// Модальные окна
+.popup {
+  user-select: none;
+  background-color: $white;
+  border-radius: 3px;
+  box-shadow: 0 0 30px rgba($black, 0.08);
+  font-size: 14px;
+  line-height: 18px;
+  padding: 12px 0px;
+  position: absolute;
+  transition: 0.25s;
+  width: 200px;
+  z-index: 100;
+  top: 0;
+  right: 0;
+}
+
+// ---- Tables ----
+.table {
+  display: table;
+  overflow-x: auto;
+  white-space: nowrap;
+  min-width: 100%;
+  td,
+  th {
+    text-align: left;
+    border-bottom: 1px solid rgba($blue, 0.1);
+    padding: 20px 16px;
+  }
+  thead {
+    color: $blue;
+    border-bottom: 1px solid $blue;
+    td,
+    th {
+      padding: 12px 16px;
+    }
+  }
+  tbody {
+    td,
+    th {
+    }
+  }
+}
+
+// Preloader
+.loading {
+  background: #e5e5e5;
+  position: relative;
+  font-size: 0;
+  &::before {
+    position: absolute;
+    content: '';
+    background: #c6c6c6;
+    width: 100%;
+    height: 100%;
+    animation: skeleton 3s ease-in-out infinite;
+  }
+}
+
+@keyframes skeleton {
+  0% {
+    transform: scaleX(0);
+    transform-origin: left;
+    opacity: 0.3;
+  }
+  20% {
+    transform: scaleX(1);
+    transform-origin: left;
+    opacity: 1;
+  }
+  28% {
+    transform: scaleX(1);
+    transform-origin: right;
+  }
+  51% {
+    transform: scaleX(0);
+    transform-origin: right;
+  }
+  58% {
+    transform: scaleX(0);
+    transform-origin: right;
+  }
+  82% {
+    transform: scaleX(1);
+    transform-origin: right;
+  }
+  83% {
+    transform: scaleX(1);
+    transform-origin: left;
+  }
+  96% {
+    transform: scaleX(0);
+    transform-origin: left;
+  }
+  to {
+    transform: scaleX(0);
+    transform-origin: left;
+    opacity: 0.3;
+  }
 }
